fix navbar z-index

--- a/src/common/components/profile-cover/_index.scss
+++ b/src/common/components/profile-cover/_index.scss
@@ -11,7 +11,7 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 
     @include themify(day) {
       background-color: $white-three;
